infra/cfn/01_network-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: SmartRetail Network Stack

Parameters:
  SrEnv:
    Type: String
    Default: dev

Resources:

  SmartRetailVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub smartretail-vpc-${SrEnv}

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref SmartRetailVpc

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SmartRetailVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true

  PrivateAppSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SmartRetailVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: 10.0.10.0/24

  PrivateDataSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SmartRetailVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: 10.0.20.0/24

  SgApiGatewayLink:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: API Gateway VPC Link SG
      VpcId: !Ref SmartRetailVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8081
          ToPort: 8081
          CidrIp: 0.0.0.0/0

  SgEcsTasks:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS Tasks SG
      VpcId: !Ref SmartRetailVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref SgApiGatewayLink
        - IpProtocol: tcp
          FromPort: 8081
          ToPort: 8081
          SourceSecurityGroupId: !Ref SgApiGatewayLink

  SgLambda:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Lambda SG
      VpcId: !Ref SmartRetailVpc

  SgRdsProxy:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS Proxy SG
      VpcId: !Ref SmartRetailVpc

  SgRds:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS SG
      VpcId: !Ref SmartRetailVpc

  RdsIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SgRds
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref SgRdsProxy

Outputs:
  VpcId:
    Value: !Ref SmartRetailVpc
    Export:
      Name: !Sub ${AWS::StackName}-VpcId

  EcsSecurityGroup:
    Value: !Ref SgEcsTasks
